Fixed paragraph and header spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,6 +53,10 @@ h1, h2, h3, h4, h5, h6, .page-links, nav {
   font-family: 'montserratregular', sans-serif;
 }
 
+h1, h4, p {
+  margin-top: 0;
+}
+
 a {
   color: #c6deec;
   text-decoration: none;
@@ -66,6 +70,7 @@ a:hover {
 div.highlighter-rouge {
   white-space: pre-wrap;
   padding-left: 1rem;
+  margin-bottom: 1em;
   overflow-x: auto;
   background-color: #E9E9EC;
 }
